--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Investigating Robustness and Interpretability of Link Prediction via Adversarial Modifications
+description: Pouya Pezeshkpour, Yifan Tian, and Sameer Singh
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
