--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Investigating Robustness and Interpretability of Link Prediction via Adversarial Modifications
-description: Pouya Pezeshkpour, Yifan Tian, and Sameer Singh
+description: <a href="https://pouyapez.github.io" class="btn">Pouya Pezeshkpour</a>, <a href="https://www.linkedin.com/in/yifan-tian-54844b106/" class="btn">Yifan Tian</a>, and <a href="http://sameersingh.org" class="btn">Sameer Singh</a>
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
