--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Investigating Robustness and Interpretability of Link Prediction via Adversarial Modifications
-description: <a href="https://pouyapez.github.io"><font color="white"><u><b>Pouya Pezeshkpour</b></u></a>, <a href="https://www.linkedin.com/in/yifan-tian-54844b106/"><font color="white"><u><b>Yifan Tian</b></u></a>, and <a href="http://sameersingh.org"><font color="white"><u><b>Sameer Singh</b></u></a>
+description: <a href="https://pouyapez.github.io"><font color="white"><u><b>Pouya Pezeshkpour</b></u></font></a>, <a href="https://www.linkedin.com/in/yifan-tian-54844b106/"><font color="white"><u><b>Yifan Tian</b></u></font></a>, and <a href="http://sameersingh.org"><font color="white"><u><b>Sameer Singh</b></u></font></a>
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
